--- a/iframe-template.html
+++ b/iframe-template.html
@@ -67,6 +67,6 @@
            S202.403,42.716,202.403,95.22z"></path>
        </svg><h1>Please rotate your screen</h1></div></div>
        <!-- rename your homepage or update the src below --> 
-       <div id="container"><iframe src="INTDES GAM.html"></iframe></div>
+       <div id="container"><iframe src="INTDES_GAM.html"></iframe></div>
     
 </body></html>
